# mentea

./: .babelrc  .gitignore  .watchmanconfig  README.md  conftest.py  cypress.json  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.config.js
.github/workflows/: CI.yml  remote.yml
accounts/: urls.py  views.py
cypress/support/: commands.js  index.js
events/: admin.py  forms.py  models.py  notification.py  urls.py  views.py
events/migrations/: 0001_initial.py  0001_squashed_0028_merge_20220311_0043.py  0002_alter_meetingnotes_author.py  0002_remove_feedbackform_acceptingsubmissions_and_more.py  0003_alter_feedbackform_acceptingsubmissionsuntil.py  0004_alter_feedbackform_acceptingsubmissionsuntil.py  0005_alter_questions_type_delete_questiontype.py  0006_rename_data_questions_type_data.py  0007_feedbackform_allowseditingsubmissions_and_more.py  0008_defaultfeedbackforms.py  0009_alter_event_feedback_form.py  0010_alter_event_feedback_form.py  0011_event_description.py  0012_event_topic.py  0013_event_endtime.py  0014_event_attendees.py  0015_alter_event_attendees.py  0016_alter_event_attendees.py  0017_eventrequest_details.py  0018_remove_eventrequest_details.py  0019_eventrequest_events_even_type_id_16c464_idx.py  0020_remove_eventrequest_events_even_type_id_16c464_idx_and_more.py  0021_remove_eventrequest_events_even_request_beb3ea_idx_and_more.py  0022_alter_event_type_alter_eventrequest_type_and_more.py  0022_meetingrequest.py  0023_meetingnotes.py  0024_rename_note_meetingnotes_content.py  0025_generalfeedbackform.py  0026_generalfeedbackform_feedback.py  0027_remove_meetingnotes_mentee_and_more.py  0028_merge_20220311_0043.py
events/tests/: workshop_tests.py
main/: apps.py  feedback.py  models.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py
mentea/: asgi.py  urls.py  wsgi.py
mentea/settings/: base.py
mentea/templates/: 404.html  base.html  error.html  main.html  mentee_base.html  mentor_base.html
mentoring/: asgi.py  urls.py  wsgi.py
mentoring/settings/: base.py  dev.py  production.py.example
mentoring_platform/: asgi.py  urls.py  wsgi.py
mentoring_platform/settings/: base.py  dev.py
mentoring_platform/templates/: 403.html  base.html  main.html  mentee_base.html  mentor_base.html
people/: admin.py  apps.py  forms.py  matching.py  models.py  urls.py  util.py  views.py
people/migrations/: 0001_initial.py  0001_squashed_0013_remove_rating_associated_topic.py  0002_remove_usertopic_people_user_user_id_fe678a_idx_and_more.py  0002_user_bio_alter_user_business_area.py  0002_user_bio_alter_user_business_area_and_more.py  0003_merge_20220213_1607.py  0004_user_last_login_user_password_and_more.py  (+12 more)
python_example/: __init__.py  __main__.py
relationships/: apps.py  urls.py  views.py
src/: form-builder.tsx  index.tsx  result-viewer.tsx
test/: test_example.py
tests/: make_test_data.py  test_data.py
(+80 files in other folders)
